--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -26,13 +27,19 @@
 
         <activity
             android:name=".NewEntryActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:parentActivityName=".DashboardActivity">
+            android:parentActivityName=".DashboardActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
 
         <service
             android:name=".TwinWorldNetworkService"
             android:exported="false"/>
+
+        <activity
+            android:name=".EntryDetailActivity"
+            android:parentActivityName=".DashboardActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+        </activity>
 
     </application>
 
