added edit entry ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,11 @@
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
 
+        <activity
+            android:name=".EditActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:parentActivityName=".EntryDetailActivity">
+        </activity>
     </application>
 
 </manifest>
