--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.github.AnyChart:AnyChart-Android:1.0.6'
+    implementation 'com.nightonke:boommenu:2.1.1'
 }
