--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.github.AnyChart:AnyChart-Android:1.0.6'
     implementation 'com.nightonke:boommenu:2.1.1'
+    implementation 'me.itangqi.waveloadingview:library:0.3.5'
 }
