--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     implementation 'com.github.AnyChart:AnyChart-Android:1.0.6'
     implementation 'com.nightonke:boommenu:2.1.1'
     implementation 'me.itangqi.waveloadingview:library:0.3.5'
+    implementation 'com.google.dagger:dagger-android:2.11'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 }
