--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
 
     <application
         android:allowBackup="true"
-        android:name=".MainApplication"
+        android:name=".application.MainApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".DashboardActivity"
+            android:name=".views.dashboard.DashboardActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -26,22 +26,22 @@
             android:resource="@array/preloaded_fonts"/>
 
         <activity
-            android:name=".NewEntryActivity"
-            android:parentActivityName=".DashboardActivity"
+            android:name=".views.newentry.NewEntryActivity"
+            android:parentActivityName=".views.dashboard.DashboardActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
         <activity
-            android:name=".EntryDetailActivity"
-            android:parentActivityName=".DashboardActivity"
+            android:name=".views.entrydetail.EntryDetailActivity"
+            android:parentActivityName=".views.dashboard.DashboardActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
         <activity
-            android:name=".EditActivity"
-            android:parentActivityName=".EntryDetailActivity"
+            android:name=".views.editentry.EditActivity"
+            android:parentActivityName=".views.entrydetail.EntryDetailActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
         <activity
-            android:name=".SettingsActivity"
+            android:name=".views.settings.SettingsActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
         </activity>
     </application>
